# meeting-recorder

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements-diarization.txt
mac/: Package.swift  build.sh
mac/Resources/: AppIcon.icns  Info.plist  diarize_sidecar.py
mac/Sources/MeetingRecorder/: AppDelegate.swift  MeetingRecorderApp.swift
mac/Sources/MeetingRecorder/Audio/: AudioRecorder.swift  SystemAudioCapture.swift
mac/Sources/MeetingRecorder/Config/: AppConfig.swift
mac/Sources/MeetingRecorder/Detection/: MeetingAppDetector.swift  MicrophoneActivity.swift
mac/Sources/MeetingRecorder/Diarization/: DiarizationService.swift
mac/Sources/MeetingRecorder/LLM/: AnthropicClient.swift  Summarizer.swift
mac/Sources/MeetingRecorder/MenuBar/: MeetingWatcher.swift  MenuBarController.swift
mac/scripts/: generate_icon.swift  make_dmg.sh  reinstall.sh  setup_signing.sh
scripts/: check_setup.py
src/meeting_recorder/: __init__.py  cli.py  config.py
src/meeting_recorder/audio/: __init__.py  capture.py  devices.py
src/meeting_recorder/diarization/: __init__.py  pyannote_diar.py
src/meeting_recorder/llm/: __init__.py  client.py  realtime.py  summarize.py
src/meeting_recorder/pipeline/: __init__.py  recorder.py
src/meeting_recorder/speakers/: __init__.py  identify.py
src/meeting_recorder/storage/: __init__.py  markdown.py
src/meeting_recorder/transcription/: __init__.py  whisper.py
src/meeting_recorder/ui/: __init__.py  server.py
tests/: test_storage.py
(+15 files in other folders)
