[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-recorder"
version = "0.1.0"
description = "Local meeting recorder with diarization, AI summaries, and real-time question suggestions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yunliu Mok" }]
dependencies = [
    "anthropic>=0.40.0",
    "faster-whisper>=1.0.3",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.1",
    "torch>=2.1",
    "torchaudio>=2.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
meeting-recorder = "meeting_recorder.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
